# pithos

./: .gitignore  Makefile.am  autogen.sh  configure.ac  meson_post_install.py
data/: io.github.Pithos.appdata.xml.in  meson.build
docs/: meson.build  pithos.1
po/: Makevars  POTFILES.in
